--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/C++ STUDY/v17/Current/Browse.VC.db-shm
+/.vs/C++ STUDY/v17/Current/Browse.VC.db-wal
+/.vs/C++ STUDY/v17/Current/Browse.VC.opendb
